--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .navbar{
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
@@ -31,6 +31,16 @@
 .navbar_navigation-items a {
     color: white;
     text-decoration: none;
+}
+
+.search form {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style-type: none;
+    position: flex;
+    left: 0;
+    align-items: center;
 }
 
 .navbar_navigation-items a:hover,
