--- a/src/Components/ContactUs/ContantUs.css
+++ b/src/Components/ContactUs/ContantUs.css
@@ -3,8 +3,33 @@
     margin: 0;
     padding: 0;
     align-items: center;
+    color: white;
 }
 
 .contact {
     position: relative;
+    color: white;
+}
+
+label{
+    color: white;
+}
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=submit] {
+    width: 100%;
+    background-color: #556E84;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
