--- a/src/Components/Add Movie Form/AddMovieForm.css
+++ b/src/Components/Add Movie Form/AddMovieForm.css
@@ -1,14 +1,56 @@
-.shity_movie ul {
-    list-style: none; 
-    margin: 0;
-    padding: 0;
-    align-items: center;
-}
-
-.shity_movie {
-    position: relative;
-}
-
-label{
+.form {
+    font-family: sans-serif;
+    font-size: 16px;
     color: white;
+}
+
+.form * {
+    box-sizing: border-box;
+    line-height: 2.0;
+    margin: auto;
+}
+
+.form_title {
+    font-size: 3em;
+    font-weight: 600;
+    margin: auto;
+    flex-direction: column
+}
+
+.form_item {
+    display: flex;
+    flex-direction: column;
+}
+
+.form_item > * {
+    align-self: flex-start;
+}
+
+.form_label {
+    font-weight: 600;
+    padding: 10px 0;
+}
+
+.form_input{
+    -webkit-appearnace: none;
+
+    width: 100%;
+    max-width: 600px;
+
+    padding: 0.8em;
+    font-size: 0.9em;
+    font-family: sans-serif;
+
+    border: 5px solid #dddddd;
+    border-radius: 10px;
+}
+
+
+.form_input::placeholder {
+    color: #bbbbbbbb
+
+}
+
+.form p {
+    margin: auto;
 }
