--- a/src/Components/ContactUs/ContantUs.css
+++ b/src/Components/ContactUs/ContantUs.css
@@ -1,35 +1,52 @@
-.contact ul {
-    list-style: none; 
-    margin: 0;
-    padding: 0;
-    align-items: center;
+.form {
+    font-family: sans-serif;
+    font-size: 16px;
     color: white;
 }
 
-.contact {
-    position: relative;
-    color: white;
-}
-
-label{
-    color: white;
-}
-input[type=text] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+.form * {
     box-sizing: border-box;
+    line-height: 2.0;
 }
-input[type=submit] {
+
+.form_title {
+    font-size: 3em;
+    font-weight: 600;
+    flex-direction: column
+}
+
+.form_item {
+    display: flex;
+    flex-direction: column;
+}
+
+.form_item > * {
+    align-self: flex-start;
+    margin-left: 0;
+}
+
+.form_label {
+    font-weight: 600;
+    padding: 10px 0;
+}
+
+.form_input{
+    -webkit-appearnace: none;
+
     width: 100%;
-    background-color: #556E84;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    max-width: 425px;
+
+    padding: 0.8em;
+    font-size: 0.9em;
+    font-family: sans-serif;
+
+    border: 5px solid #dddddd;
+    border-radius: 10px;
 }
+
+
+.form_input::placeholder {
+    color: #bbbbbbbb
+
+}
+
